@@ -1,5 +1,5 @@
 name               : messagepack-rpc
-version            : 0.1.0.1
+version            : 0.1.0.2
 synopsis           : Message Pack RPC over TCP
 description        : Message Pack RPC over TCP
 homepage           : http://github.com/rodrigosetti/messagepack-rpc
@@ -26,7 +26,7 @@ library
                    , bytestring     == 0.10.*
                    , cereal         == 0.4.*
                    , containers     == 0.5.*
-                   , messagepack    == 0.2.*
+                   , messagepack    >= 0.2.1 && <= 0.2
                    , network-simple == 0.4.*
                    , text           == 1.*
   default-language : Haskell2010
