@@ -1,3 +1,7 @@
+2014-11-17 Rodrigo Setti <rodrigosetti@gmail.com>
+
+	* Fix the broken API due to the fact that messagepack is now using Int64
+
 2014-07-30 Rodrigo Setti <rodrigosetti@gmail.com>
 
 	* Parse request on demand (instead of waiting for the entire data)
